1.添加查看答案页面，并禁止作弊

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="ylan_tv_string">YLan</string>
 
-<!--    <string name="question_text">1 + 1 = 3 ?</string>-->
+    <!--    <string name="question_text">1 + 1 = 3 ?</string>-->
     <string name="question_text_1">1 + 1 = 3 ?</string>
     <string name="question_text_2">1 + 2 = 4 ?</string>
     <string name="question_text_3">1 + 3 = 5 ?</string>
@@ -21,5 +21,10 @@
     <string name="incorrect_toast">错误！</string>
     <string name="correct_toast">正确！</string>
     <string name="menu_settings">设置</string>
+
+    <string name="warning_text">确定要查看答案？</string>
+    <string name="show_answer_button">显示答案</string>
+    <string name="cheat_button">查看答案!</string>
+    <string name="judgment_toast">禁止作弊!</string>
 
 </resources>
